--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.okta.developer</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>heroku-spring-boot-boilerplate</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
